# task-automation-agent

./:  LICENSE.md   .example.env  .gitignore  Dockerfile  aTaskassigner.py  datagen.py  debug.py  main.py  pyproject.toml  task_a1.py  task_a2.py
TaskA/: task_a1.py  task_a10.py  task_a2.py  task_a3.py  task_a4.py  task_a5.py  task_a6.py  task_a7.py  task_a8.py  task_a9.py
TaskB/: task_b12.py  task_b3.py  task_b5.py  task_b6.py  task_b7.py  task_b9.py
data/: comments-similar.txt  comments.txt  contacts-sorted.json  contacts.json  credit-card.txt  dates.txt  email-sender.txt  email.txt  format.md  logs-recent.txt  ticket-sales-gold.txt  ticket-sales.db
data/docs/: index.json
data/docs/ability/: brother.md  forget.md  generation.md  instead.md  knowledge.md  less.md  new.md  run.md  situation.md  threat.md
data/docs/dog/: dream.md  health.md  leg.md  man.md  money.md  onto.md  spend.md  while.md  wife.md  within.md
data/docs/east/: also.md  bank.md  everybody.md  nearly.md  police.md  stand.md  suffer.md  tonight.md  toward.md  whatever.md
data/docs/experience/: free.md  get.md  none.md  own.md  parent.md  several.md  sit.md  skin.md  standard.md  window.md
data/docs/federal/: brother.md  environment.md  event.md  idea.md  imagine.md  large.md  population.md  sign.md  so.md  these.md
data/docs/for/: bank.md  bar.md  its.md  long.md  opportunity.md  people.md  smile.md  suddenly.md  they.md
data/docs/lay/: amount.md  back.md  effort.md  feeling.md  least.md  market.md  material.md  take.md  very.md  wife.md
data/docs/new/: bag.md  hope.md  nature.md  (+7 more)
(+109 files in other folders)
